src/cpp/exports.h

FFI_FUNC_EXPORT void Utility_freeSlotConstructorParams(SlotConstructorParams params);
FFI_FUNC_EXPORT void Utility_freeSlotToWifResponse(SlotToWifResponse response);
FFI_FUNC_EXPORT void Utility_freeTapsignerConstructorParams(TapsignerConstructorParams params);