lib/src/native/bindings.dart


  late final _Utility_freeSlotConstructorParamsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(SlotConstructorParams)>>(
          'Utility_freeSlotConstructorParams');
  late final _Utility_freeSlotConstructorParams =
      _Utility_freeSlotConstructorParamsPtr.asFunction<
          void Function(SlotConstructorParams)>();

  void Utility_freeSlotToWifResponse(
    SlotToWifResponse response,
  ) {
    return _Utility_freeSlotToWifResponse(
      response,
    );
  }

  late final _Utility_freeSlotToWifResponsePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(SlotToWifResponse)>>(
          'Utility_freeSlotToWifResponse');
  late final _Utility_freeSlotToWifResponse = _Utility_freeSlotToWifResponsePtr
      .asFunction<void Function(SlotToWifResponse)>();

  void Utility_freeTapsignerConstructorParams(
    TapsignerConstructorParams params,
  ) {
    return _Utility_freeTapsignerConstructorParams(
      params,
    );
  }

  late final _Utility_freeTapsignerConstructorParamsPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(TapsignerConstructorParams)>>(
      'Utility_freeTapsignerConstructorParams');
  late final _Utility_freeTapsignerConstructorParams =
      _Utility_freeTapsignerConstructorParamsPtr.asFunction<
          void Function(TapsignerConstructorParams)>();
}

class CBinaryArray extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int length;
}

class CKTapCardConstructorParams extends ffi.Struct {
  @ffi.Int32()
  external int handle;

  @ffi.Int32()
  external int type;

  external ffi.Pointer<ffi.Char> ident;

  external ffi.Pointer<ffi.Char> appletVersion;

  @ffi.Int32()
  external int authDelay;

  @ffi.Int32()
  external int birthHeight;

  @ffi.Int8()
  external int isCertsChecked;

  @ffi.Int8()
  external int isTampered;

  @ffi.Int8()
  external int isTestnet;

  @ffi.Int8()
  external int needsSetup;
}

class CKTapCardHandle extends ffi.Struct {
  @ffi.Int32()
  external int index;

  @ffi.Int32()
  external int type;
}

abstract class CKTapCardType {
  static const int unknownCard = 0;
  static const int satscard = 1;
  static const int tapsigner = 2;
}

/// @brief Represents errors that may occur when the library is used incorrectly
abstract class CKTapInterfaceErrorCode {
  static const int pending = 0;
  static const int success = 1;
  static const int attemptToFinalizeActiveThread = 2;
  static const int caughtTapProtocolException = 3;
  static const int expectedSatscardButReceivedNothing = 4;
  static const int expectedTapsignerButReceivedNothing = 5;
  static const int failedToPerformHandshake = 6;
  static const int invalidCardDuringHandshake = 7;
  static const int invalidHandlingOfCardDuringFinalization = 8;
  static const int libraryNotInitialized = 9;
  static const int operationCanceled = 10;
  static const int operationFailed = 11;
  static const int operationStillInProgress = 12;
  static const int threadAlreadyInUse = 13;
  static const int threadAllocationFailed = 14;
  static const int threadNotReadyForResponse = 15;
  static const int threadNotResetForHandshake = 16;
  static const int threadNotYetFinalized = 17;
  static const int threadNotYetStarted = 18;
  static const int threadResponseFinalizationFailed = 19;
  static const int timeoutDuringTransport = 20;
  static const int unableToFinalizeAsyncAction = 21;
  static const int unknownErrorDuringHandshake = 22;
  static const int unknownErrorDuringTapProtocolFunction = 23;
  static const int unknownSatscardHandle = 24;
  static const int unknownSlotForGivenSatscardHandle = 25;
  static const int unknownTapsignerHandle = 26;
}

/// Used when accessing tap_protocol methods that can throw
class CKTapInterfaceStatus extends ffi.Struct {
  @ffi.Int32()
  external int errorCode;

  external CKTapProtoException exception;
}

class CKTapOperationResponse extends ffi.Struct {
  external CKTapCardHandle handle;

  @ffi.Int32()
  external int errorCode;
}

class CKTapProtoException extends ffi.Struct {
  @ffi.Int32()
  external int code;

  external ffi.Pointer<ffi.Char> message;
}

/// @brief Mirrors tap_protocol::TapProtoException
abstract class CKTapProtoExceptionErrorCode {
  static const int INVALID_DEVICE = 100;
  static const int UNLUCKY_NUMBER = 205;
  static const int BAD_ARGUMENTS = 400;
  static const int BAD_AUTH = 401;
  static const int NEED_AUTH = 403;
  static const int UNKNOW_COMMAND = 404;
  static const int INVALID_COMMAND = 405;
  static const int INVALID_STATE = 406;
  static const int WEAK_NONCE = 417;
  static const int BAD_CBOR = 422;
  static const int BACKUP_FIRST = 425;
  static const int RATE_LIMIT = 429;
  static const int DEFAULT_ERROR = 500;
  static const int MESSAGE_TOO_LONG = 601;
  static const int MISSING_KEY = 602;
  static const int ISO_SELECT_FAIL = 603;
  static const int SW_FAIL = 604;
  static const int INVALID_CVC_LENGTH = 605;
  static const int PICK_KEY_PAIR_FAIL = 606;
  static const int ECDH_FAIL = 607;
  static const int XCVC_FAIL = 608;
  static const int UNKNOW_PROTO_VERSION = 609;
  static const int INVALID_PUBKEY_LENGTH = 610;
  static const int NO_PRIVATE_KEY_PICKED = 611;
  static const int MALFORMED_BIP32_PATH = 612;
  static const int INVALID_HASH_LENGTH = 613;
  static const int SIG_VERIFY_ERROR = 614;
  static const int INVALID_DIGEST_LENGTH = 615;
  static const int INVALID_PATH_LENGTH = 616;
  static const int SERIALIZE_ERROR = 617;
  static const int EXCEEDED_RETRY = 618;
  static const int INVALID_CARD = 619;
  static const int SIGN_ERROR = 620;
  static const int SIG_TO_PUBKEY_FAIL = 621;
  static const int PSBT_PARSE_ERROR = 622;
  static const int PSBT_INVALID = 623;
  static const int INVALID_ADDRESS_TYPE = 624;
  static const int INVALID_BACKUP_KEY = 625;
  static const int INVALID_PUBKEY = 626;
  static const int INVALID_PRIVKEY = 627;
  static const int INVALID_SLOT = 628;
}

/// @brief Mirrors tap_protocol::Satscard::SlotStatus
abstract class CKTapSatscardSlotStatus {
  static const int UNUSED = 0;
  static const int SEALED = 1;
  static const int UNSEALED = 2;
}

/// @brief The current state of the background thread which handles tap-protocol commands
abstract class CKTapThreadState {
  /// Ready state
  static const int notStarted = 0;
  static const int asyncActionStarting = 1;

  /// Transport request loop
  static const int awaitingTransportRequest = 2;
  static const int transportRequestReady = 3;
  static const int transportResponseReady = 4;
  static const int processingTransportResponse = 5;

  /// Success state
  static const int finished = 6;

  /// Fail states
  static const int canceled = 7;
  static const int failed = 8;
  static const int invalidCardProduced = 9;
  static const int tapProtocolError = 10;
  static const int timeout = 11;
}

class SatscardConstructorParams extends ffi.Struct {
  external CKTapInterfaceStatus status;

  external CKTapCardConstructorParams base;

  @ffi.Int32()
  external int activeSlotIndex;

  @ffi.Int32()
  external int numSlots;

  @ffi.Int8()
  external int hasUnusedSlots;

  @ffi.Int8()
  external int isUsedUp;
}

class SatscardGetSlotResponse extends ffi.Struct {
  external CKTapInterfaceStatus status;

  external SlotConstructorParams params;
}

class SlotConstructorParams extends ffi.Struct {
  @ffi.Int32()
  external int satscardHandle;

  @ffi.Int32()
  external int index;

  @ffi.Int32()
  external int status;

  external ffi.Pointer<ffi.Char> address;

  /// Requires the CVC to acquire
  external CBinaryArray privkey;

  external CBinaryArray pubkey;

  external CBinaryArray masterPK;

  external CBinaryArray chainCode;
}

class SlotToWifResponse extends ffi.Struct {
  external CKTapInterfaceStatus status;

  external ffi.Pointer<ffi.Char> wif;
}

class TapsignerConstructorParams extends ffi.Struct {
  external CKTapInterfaceStatus status;

  external CKTapCardConstructorParams base;

  @ffi.Int32()
  external int numberOfBackups;

  external ffi.Pointer<ffi.Char> derivationPath;
}
